--- a/.env
+++ b/.env
@@ -1,26 +1,15 @@
-# Broker settings
-VITE_ORDERLY_BROKER_ID=demo
-VITE_ORDERLY_BROKER_NAME=Shitzu DEX
-
-# Meta tags
-VITE_APP_NAME=Shitzu DEX
-VITE_APP_DESCRIPTION=Shitzu DEX - A DEX powered by Orderly Network
-
-# Social Media Links
-VITE_TELEGRAM_URL=
-VITE_DISCORD_URL=
-VITE_TWITTER_URL=
-
-# Logo flags - indicates if logos have been set
-VITE_HAS_PRIMARY_LOGO=false
-VITE_HAS_SECONDARY_LOGO=false
-
-# Navigation menu settings
-VITE_ENABLED_MENUS=
-
-# WalletConnect configuration
-VITE_WALLET_CONNECT_PROJECT_ID=
-
-# Privy configuration
+VITE_BROKER_ID=demo
+VITE_BROKER_NAME=Shitzu DEX
+VITE_ORDERLY_MAINNET_CHAINS=2741
+VITE_ORDERLY_TESTNET_CHAINS=
+VITE_TELEGRAM_LINK=
+VITE_DISCORD_LINK=
+VITE_X_LINK=
+VITE_WALLETCONNECT_PROJECT_ID=
 VITE_PRIVY_APP_ID=cmadp4elf00bhl10nw1g2esrc
-VITE_PRIVY_TERMS_OF_USE=
+VITE_PRIVY_TERMS_OF_USE_URL=
+VITE_ENABLED_MENUS=
+VITE_CUSTOM_MENUS=Website, https://shitzuapes.xyz
+VITE_ENABLE_ABSTRACT_WALLET=true
+VITE_DISABLE_MAINNET=false
+VITE_DISABLE_TESTNET=true
