--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ VITE_BROKER_ID=demo
 VITE_BROKER_NAME=Shitzu DEX
 VITE_ORDERLY_MAINNET_CHAINS=2741
 VITE_ORDERLY_TESTNET_CHAINS=
-VITE_TELEGRAM_LINK=
+VITE_TELEGRAM_LINK=https://t.me/Shitzu_Community
 VITE_DISCORD_LINK=
-VITE_X_LINK=
-VITE_WALLETCONNECT_PROJECT_ID=
+VITE_X_LINK=https://x.com/shitzuonnear
+VITE_WALLETCONNECT_PROJECT_ID=920359a0d5a8c57fa863681dbe5fed84
 VITE_PRIVY_APP_ID=cmadp4elf00bhl10nw1g2esrc
 VITE_PRIVY_TERMS_OF_USE_URL=
 VITE_ENABLED_MENUS=
