Update DEX configuration and branding

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ VITE_BROKER_ID=demo
 VITE_BROKER_NAME=Shitzu DEX
 VITE_ORDERLY_MAINNET_CHAINS=2741
 VITE_ORDERLY_TESTNET_CHAINS=
-VITE_TELEGRAM_LINK=https://t.me/Shitzu_Community
-VITE_DISCORD_LINK=
-VITE_X_LINK=https://x.com/shitzuonnear
+VITE_TELEGRAM_URL=https://t.me/Shitzu_Community
+VITE_DISCORD_URL=
+VITE_TWITTER_URL=https://x.com/shitzuonnear
 VITE_WALLETCONNECT_PROJECT_ID=920359a0d5a8c57fa863681dbe5fed84
 VITE_PRIVY_APP_ID=cmadp4elf00bhl10nw1g2esrc
 VITE_PRIVY_TERMS_OF_USE=
@@ -15,3 +15,5 @@ VITE_DISABLE_MAINNET=false
 VITE_DISABLE_TESTNET=true
 VITE_DISABLE_EVM_WALLETS=true
 VITE_DISABLE_SOLANA_WALLETS=true
+VITE_HAS_PRIMARY_LOGO=true
+VITE_HAS_SECONDARY_LOGO=true
