--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_BROKER_ID=demo
-VITE_BROKER_NAME=Shitzu DEX
+VITE_ORDERLY_BROKER_ID=demo
+VITE_ORDERLY_BROKER_NAME=Shitzu DEX
 VITE_ORDERLY_MAINNET_CHAINS=
 VITE_ORDERLY_TESTNET_CHAINS=
 VITE_TELEGRAM_URL=https://t.me/Shitzu_Community
@@ -8,8 +8,8 @@ VITE_TWITTER_URL=https://x.com/shitzuonnear
 VITE_WALLETCONNECT_PROJECT_ID=920359a0d5a8c57fa863681dbe5fed84
 VITE_PRIVY_APP_ID=cmadp4elf00bhl10nw1g2esrc
 VITE_PRIVY_TERMS_OF_USE=
-VITE_ENABLED_MENUS=
-VITE_CUSTOM_MENUS=Website, https://shitzuapes.xyz
+VITE_ENABLED_MENUS=Trading,Portfolio,Markets,Leaderboard
+VITE_CUSTOM_MENUS=🐶 Website, https://shitzuapes.xyz; 💩 App, https://app.shitzuapes.xyz
 VITE_ENABLE_ABSTRACT_WALLET=true
 VITE_DISABLE_MAINNET=false
 VITE_DISABLE_TESTNET=false
