--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ VITE_DISABLE_EVM_WALLETS=false
 VITE_DISABLE_SOLANA_WALLETS=false
 VITE_HAS_PRIMARY_LOGO=true
 VITE_HAS_SECONDARY_LOGO=true
+VITE_USE_CUSTOM_PNL_POSTERS=true
+VITE_CUSTOM_PNL_POSTER_COUNT=3
