Update DEX configuration and branding

--- a/.env
+++ b/.env
@@ -21,3 +21,11 @@ VITE_USE_CUSTOM_PNL_POSTERS=true
 VITE_CUSTOM_PNL_POSTER_COUNT=2
 VITE_TRADING_VIEW_COLOR_CONFIG=
 VITE_AVAILABLE_LANGUAGES=en,de,fr,zh,ja,es,vi,ko,ru,pt,uk,id,tr,pl,nl,it
+VITE_SEO_SITE_NAME=Shitzu DEX
+VITE_SEO_SITE_DESCRIPTION=A powerful perpetual trading DEX powered by Orderly Network
+VITE_SEO_SITE_URL=https://perps.shitzuapes.xyz
+VITE_SEO_SITE_LANGUAGE=en
+VITE_SEO_SITE_LOCALE=en_US
+VITE_SEO_TWITTER_HANDLE=@shitzuonnear
+VITE_SEO_THEME_COLOR=
+VITE_SEO_KEYWORDS=dex,crypto,defi,perpetual,perps,shitzu
