--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ VITE_TWITTER_URL=https://x.com/shitzuonnear
 VITE_WALLETCONNECT_PROJECT_ID=920359a0d5a8c57fa863681dbe5fed84
 VITE_PRIVY_APP_ID=cmadp4elf00bhl10nw1g2esrc
 VITE_PRIVY_TERMS_OF_USE=
-VITE_ENABLED_MENUS=Trading,Portfolio,Markets,Leaderboard
+VITE_ENABLED_MENUS=Trading,Portfolio,Markets,Leaderboard,Rewards
 VITE_CUSTOM_MENUS=🐶 Website, https://shitzuapes.xyz; 💩 App, https://app.shitzuapes.xyz
 VITE_ENABLE_ABSTRACT_WALLET=true
 VITE_DISABLE_MAINNET=false
