--- a/.env
+++ b/.env
@@ -2,19 +2,21 @@ VITE_ORDERLY_BROKER_ID=shitzu
 VITE_ORDERLY_BROKER_NAME=Shitzu DEX
 VITE_ORDERLY_MAINNET_CHAINS=
 VITE_ORDERLY_TESTNET_CHAINS=
+VITE_DEFAULT_CHAIN=
 VITE_TELEGRAM_URL=https://t.me/Shitzu_Community
 VITE_DISCORD_URL=
 VITE_TWITTER_URL=https://x.com/shitzuonnear
 VITE_WALLETCONNECT_PROJECT_ID=920359a0d5a8c57fa863681dbe5fed84
 VITE_PRIVY_APP_ID=cmadp4elf00bhl10nw1g2esrc
 VITE_PRIVY_TERMS_OF_USE=
-VITE_ENABLED_MENUS=Trading,Portfolio,Markets,Leaderboard,Rewards
+VITE_ENABLED_MENUS=Trading,Portfolio,Markets,Rewards,Leaderboard
 VITE_CUSTOM_MENUS=🐶 Website, https://shitzuapes.xyz; 💩 App, https://app.shitzuapes.xyz
 VITE_ENABLE_ABSTRACT_WALLET=true
 VITE_DISABLE_MAINNET=false
 VITE_DISABLE_TESTNET=false
 VITE_DISABLE_EVM_WALLETS=false
 VITE_DISABLE_SOLANA_WALLETS=false
+VITE_ENABLE_CAMPAIGNS=true
 VITE_HAS_PRIMARY_LOGO=true
 VITE_HAS_SECONDARY_LOGO=true
 VITE_USE_CUSTOM_PNL_POSTERS=true
