--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-deps-
 
+      - name: Cache Vite build cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules/.vite
+          key: ${{ runner.os }}-vite-${{ hashFiles('**/vite.config.ts', '**/postcss.config.js', '**/tailwind.config.ts', '**/tsconfig.json') }}-${{ hashFiles('app/**/*', 'public/**/*') }}
+          restore-keys: |
+            ${{ runner.os }}-vite-${{ hashFiles('**/vite.config.ts', '**/postcss.config.js', '**/tailwind.config.ts', '**/tsconfig.json') }}-
+            ${{ runner.os }}-vite-
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile --prefer-offline
 
