Update DEX configuration and branding

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_ORDERLY_BROKER_ID=shitzu
 VITE_ORDERLY_BROKER_NAME=Shitzu DEX
-VITE_ORDERLY_MAINNET_CHAINS=
+VITE_ORDERLY_MAINNET_CHAINS=1,1329,80094,1514,146,43114,56,42161,10,5000,8453,2818,34443,2741,98866
 VITE_ORDERLY_TESTNET_CHAINS=
 VITE_DEFAULT_CHAIN=
 VITE_TELEGRAM_URL=https://t.me/Shitzu_Community
